--- a/styles.css
+++ b/styles.css
@@ -15,15 +15,23 @@
   outline-offset: -10px;
 }
 
-.carousel-item {
+.carousel-item-example {
   color: black;
 }
 
-.carousel-inner {
+.carousel-inner-example {
   padding: 2rem;
   margin: auto;
 }
 
-.carousel-indicators {
-  margin-bottom: -10;
+.carousel-controls-example {
+  position: relative; 
+  width: 300px;
+  margin: 0 auto;
+}
+
+.carousel-indicators-example {
+   position: relative;
+   color: red;
+   margin: 0;
 }
